# client-util

./: Cargo.toml  README.md  TODO.md  justfile
.github/workflows/: ci.yml
examples/: json.rs  multi_part.rs
src/: api.rs  body.rs  client.rs  error.rs  lib.rs  request.rs  response.rs  util.rs
src/body/: json.rs
src/client/: hyper.rs  mod.rs
src/header/: mod.rs
src/request/: mod.rs  multipart.rs
src/response/: mod.rs
tests/: multipart.rs
tests/support/: delay_server.rs  server.rs
