[package]
name = "client-util"
version = "0.1.0"
edition = "2021"

[dependencies]

# Http essentials
http = "1"
http-body-util = "0.1"
tower-service = "0.3"
http-body = "1"
bytes = "1.6"
mime = "0.3"
pin-project-lite = "0.2"
tower = { version = "0.4", features = ["util"] }
# Extension layer
tower-http = { version = "0.5", features = ["timeout"] }

# Hyper client
hyper = { version = "1.3", features = ["client"], optional = true }
hyper-util = { version = "0.1", features = [
    "client",
    "http1",
    "http2",
    "client-legacy",
], optional = true }

# TLS support
hyper-rustls = { version = "0.27", features = ["http2"], optional = true }
rustls = { version = "0.23", optional = true }

# Serde support
serde = { version = "1", optional = true }

# Json 
serde_json = { version = "1", optional = true }

# Query
serde_urlencoded = { version = "0.7", optional = true }

# Auth
base64 = { version = "0.22", optional = true }

# Form
percent-encoding = { version = "2.3", optional = true }

# Stream
futures-core = { version = "0.3", optional = true }
futures-util = { version = "0.3", optional = true }


[features]
default = [
    "client-hyper",
    "tls",
    "json",
    "query",
    "decompression-deflate",
    "decompression-gzip",
    "decompression-br",
]

futures-util = ["dep:futures-util"]
futures-core = ["dep:futures-core"]
hyper-rustls = ["dep:hyper-rustls"]
rustls = ["dep:rustls"]
hyper = ["dep:hyper"]
hyper-util = ["dep:hyper-util"]
serde = ["dep:serde"]
serde_json = ["dep:serde_json", "serde"]
serde_urlencoded = ["dep:serde_urlencoded", "serde"]
base64 = ["dep:base64"]
stream = ["futures-core", "futures-util"]
client-hyper = ["hyper", "hyper-util"]
tls = ["hyper-rustls", "rustls"]

# json support
json = ["serde_json"]

# query support
query = ["serde_urlencoded"]

# multipart support
multipart = ["percent-encoding", "stream"]

# basic auth support
auth = ["base64"]
percent-encoding = ["dep:percent-encoding"]
form = ["serde_urlencoded"]

# decompression support
decompression-all = [
    "decompression-deflate",
    "decompression-gzip",
    "decompression-br",
    "decompression-zstd",
]
decompression-deflate = ["tower-http/decompression-deflate"]
decompression-gzip = ["tower-http/decompression-gzip"]
decompression-br = ["tower-http/decompression-br"]
decompression-zstd = ["tower-http/decompression-zstd"]

# full
full = ["client-hyper", "tls", "form", "json", "query", "auth", "multipart"]

[dev-dependencies]
tokio = { version = "1.38.0", features = ["full"] }
serde = { version = "1", features = ["derive"] }
hyper = { version = "1.3", features = ["server", "client"] }
hyper-util = { version = "0.1", features = [
    "server",
    "client",
    "http1",
    "http2",
    "client-legacy",
] }
[[example]]
name = "json"
path = "examples/json.rs"
required-features = ["json"]

[[example]]
name = "multipart"
path = "examples/multi_part.rs"
required-features = ["multipart"]
