[package]
name = "client-util"
version = "0.3.0"
edition = "2021"
authors = ["4t145<u4t145@163.com>"]
description = "Help you to build requests and handle responses by several extension trait!"
repository = "https://github.com/4t145/client-util"
license = "Apache-2.0"
keywords = ["http", "tower", "hyper", "client", "middleware"]
categories = ["asynchronous", "network-programming"]
readme = "README.md"

[package.metadata.docs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]

# Http essentials
http = "1"
http-body-util = "0.1"
tower-service = "0.3"
http-body = "1"
bytes = "1"
mime = "0.3"
pin-project-lite = "0.2"
tower = { version = "0.5", features = ["util"] }
# Extension layer
tower-http = { version = "0.6", features = ["timeout"], optional = true }

# Hyper client
hyper = { version = "1", features = ["client"], optional = true }
hyper-util = { version = "0.1", features = [
    "client",
    "http1",
    "http2",
    "client-legacy",
], optional = true }

# TLS support
hyper-rustls = { version = "0.27", features = ["http2"], optional = true }
rustls = { version = "0.23", optional = true }

# Serde support
serde = { version = "1", optional = true }

# Json 
serde_json = { version = "1", optional = true }

# Query
serde_urlencoded = { version = "0.7", optional = true }

# Auth
base64 = { version = "0.22", optional = true }

# Form
percent-encoding = { version = "2.3", optional = true }

# Stream
futures-core = { version = "0.3", optional = true }
futures-util = { version = "0.3", optional = true }
encoding_rs = { version = "0.8", optional = true }


tokio = { version = "1", optional = true }
tokio-util = { version = "0.7", optional = true }
thiserror = "2.0.16"
[features]
default = [
    "client-hyper",
    "client-hyper-rustls",
    "json",
    "query",
    "stream",
]

futures-util = ["dep:futures-util"]
futures-core = ["dep:futures-core"]
hyper-rustls = ["dep:hyper-rustls"]
rustls = ["dep:rustls"]
hyper = ["dep:hyper"]
hyper-util = ["dep:hyper-util"]
serde = ["dep:serde"]
serde_json = ["dep:serde_json", "serde"]
serde_urlencoded = ["dep:serde_urlencoded", "serde"]
base64 = ["dep:base64"]
client-hyper = ["hyper", "hyper-util"]
client-hyper-rustls = ["hyper-rustls", "rustls"]
encoding_rs = ["dep:encoding_rs"]

# Stream support
stream = ["futures-core", "futures-util"]

# json support
json = ["serde_json"]

# query support
query = ["serde_urlencoded"]

# multipart support
multipart = ["percent-encoding", "stream"]

# basic auth support
auth = ["base64"]
percent-encoding = ["dep:percent-encoding"]
form = ["serde_urlencoded"]

# charset decoding
charset = ["encoding_rs"]

# io extension
io-tokio = ["tokio/io-util", "tokio-util/io"]

# full
full = ["client-hyper", "client-hyper-rustls", "form", "json", "query", "auth", "multipart"]

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
hyper = { version = "1.3", features = ["server", "client"] }
hyper-util = { version = "0.1", features = [
    "server",
    "client",
    "http1",
    "http2",
    "client-legacy",
] }
tower = { version = "0.5", features = ["full"] }
[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[[example]]
name = "json"
path = "examples/json.rs"
required-features = ["json"]

[[example]]
name = "multipart"
path = "examples/multi_part.rs"
required-features = ["multipart"]
